# Magentic-AlgoTrading101

./: .gitignore  AnthropicCourse.ipynb  CustomerServiceAgent.ipynb  LICENSE  LangGraphAcademyCourse.ipynb  ProgrammaticPrompting1.ipynb  README.md  Restaurant_Menu_Cost_Calculator_Notebook.ipynb  check_env.sh  cloud_setup.sh  gemini_runinference_example.ipynb  langchain_tools.py  main.py  openbb_functions.py  openbb_vs_langchain.ipynb  openbbagent.ipynb  perplexity_tools.py  pytest.ini  rag_pipeline.py  requirements.txt  sample_server.py  setup_gcp.sh  six_step_dance.ipynb  stock-research-with-langchain-and-openbb.ipynb  tutorial.ipynb
.devcontainer/: Dockerfile  devcontainer.json
adk_short_bot/: .env  .env.example  agent.py  prompts.py  tools.py
agent_cloud_function/: call_apigateway.py  call_cloud_function.py  cleanup_apigtw.sh  deploy.sh  deploy_api_gateway.sh  main.py  openapi_spec.yaml  requirements.txt  update_cloud_function.sh
agents/: AgentReadme.md  (+13 more)
agents/adk_gsheet_agent/: deploy.py  deploy.sh  deployment_config.yaml  pyproject.toml  readme.md  requirements.txt  test_gsheetfunctions.py
agents/adk_gsheet_agent/adk_gsheet_agent/: agent.py  agent_dependencies.py  config.yaml  google_sheet_manager.py  prompts.py  requirements.txt  sheet_tool_provider.py
agents/adk_gsheet_agent/adk_gsheet_agent/tools/: character_counter.py
agents/adk_gsheet_agent/clients/: google_sheet_agent.ipynb  google_sheet_manager.py
agents/adk_gsheet_agent/deployment/: deploy.py  remote.py  test_deployment.py
agents/adk_gsheet_agent/tests/unit/: test_character_counter.py
(+337 files in other folders)
