[project]
name = "adk_gsheet_agent"
version = "0.1.0"
description = "A bot that shortens your messages"
authors = [
    {name = "Marco Mistroni", email = "mmistroni@gmail.com"}
]
readme = "readme.md"
requires-python = ">=3.11"
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.11"
requests = "^2.31.0"
google-adk = "1.6.1"
pydantic = "2.11.4"
python-dotenv = "^1.1.0"
google-cloud-aiplatform = {extras = ["adk", "agent_engines"], version = "1.103.0"}
absl-py = "2.3.1"
cloudpickle = "3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.deployment]
optional = true

[tool.poetry.group.deployment.dependencies]
absl-py = "^2.2.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"



 